--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,7 @@
 
 body {
   font-family: $textFontFamily;
+  margin: 0;
 }
 
 h1,
